Fix fake text input on mobile

--- a/src/landing/Landing.css
+++ b/src/landing/Landing.css
@@ -98,17 +98,19 @@
 
 @media screen and (max-width: 560px) {
     .landing-wrapper {
-        padding-top: 3em;
+        padding: 0;
+        margin: 0;
     }
 
     .landing-container {
+        display: block;
         border: none;
         width: 100%;
-        max-width: 100%;
         height: 100%;
-        max-height: 100%;
+        max-height: 95vh;
         white-space: normal;
         padding: 0 16px;
+        margin: 0;
     }
 }
 
@@ -130,6 +132,10 @@
     text-indent: -9999em;
     user-select: none;
     -webkit-user-select: none;
+}
+
+.prompt-text {
+    margin-bottom: -1em;
 }
 
 
